--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,134 @@
 * {
   box-sizing: border-box;
 }
+body,
+html {
+  height: 100%;
+  font-family: "Times New Roman", Times, serif;
+  background-color: rgb(237, 237, 239);
+}
+.products_results_informations {
+  width: 100%;
+  padding: 0 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+.products_category {
+  font-size: 2rem;
+  font-weight: 800;
+}
+.products_category span {
+  color: rgb(31, 25, 124);
+  font-style: italic;
+  font-weight: 100;
+}
+.products_num {
+  color: rgb(31, 25, 124);
+}
 .products_container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  height: 100%;
+  padding: 0 80px;
+}
+.products_container a {
+  text-decoration: none;
+  color: black;
 }
 .card {
-  max-width: 375px;
-  border: 1px solid black;
-  border-radius: 25px;
+  width: 100%;
+  max-width: 385px;
+  background-color: white;
+  border: 1px solid rgb(165, 161, 228);
+  border-left: 8px solid rgb(165, 161, 228);
+  margin: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-start;
+  font-size: 12px;
+  letter-spacing: 0.35px;
+  box-shadow: 6px 6px 12px rgba(112, 108, 149, 0.5);
+  transition: 0.3s ease-in-out;
+}
+.card:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+.card_image {
+  width: 100%;
+  height: 55%;
   margin: 5px;
+}
+
+.card_body {
+  padding: 0.25rem;
+  font-weight: 200;
+}
+.card_body .title,
+.card_body .price {
+  font-weight: 600;
+  font-size: 16px;
+}
+.card_body .description {
+  font-size: 14px;
+  font-weight: 100;
+  color: rgb(62, 62, 62);
+}
+.card_buttons {
+  width: 100%;
+}
+.card_buttons button {
+  width: 100%;
+  padding: 1rem;
+  font-size: 14px;
+  background-color: transparent;
+  border: 1px solid rgb(51, 43, 169);
+  color: white;
+  letter-spacing: 0.8px;
+  font-weight: 600;
+  box-shadow: none;
+  color: rgb(51, 43, 169);
+  transition: 0.2s ease-in-out;
+}
+.card_buttons button:hover {
+  background-color: rgb(51, 43, 169);
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+/* DETAILS INFO  */
+
+.colors_options_container {
+  display: flex;
+  align-items: center;
+}
+.color_option {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  margin: 2px;
+  border: none;
+}
+.color_option:hover {
+  cursor: pointer;
+}
+.color_option.activeColor {
+  border: 5px solid rgb(173, 173, 173);
+  width: 40px;
+  height: 40px;
+}
+
+.red {
+  background-color: rgb(195, 39, 65);
+}
+.blue {
+  background-color: rgb(43, 96, 203);
+}
+.green {
+  background-color: rgb(32, 180, 113);
 }
