--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ html {
 .products_container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   height: 100%;
   padding: 0 80px;
 }
@@ -94,8 +94,92 @@ html {
   color: rgb(51, 43, 169);
   transition: 0.2s ease-in-out;
 }
-.card_buttons button:hover {
+
+/* PRODUCT PAGE  */
+
+.products_container.product {
+  background-color: rgb(204, 203, 216);
+  height: 100vh;
+}
+
+.product .card {
+  max-width: 1080px;
+  height: 90vh;
+  background-color: white;
+  border: none;
+  border-left: 8px solid rgb(51, 43, 169);
+  margin: 2rem;
+  padding: 2rem;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  transition: 0.3s ease-in-out;
+}
+.product .card:hover {
+  transform: none;
+  cursor: auto;
+  transition: none;
+}
+.product .card_image {
+  height: 90%;
+  margin: 5px;
+}
+
+.product .card_body {
+  width: 70%;
+  /* padding: 2rem; */
+  font-weight: 200;
+}
+.product .card_body .title,
+.product .card_body .price {
+  font-weight: 600;
+  font-size: 22px;
+}
+.product .card_body .price {
+  padding-bottom: 2.5rem;
+}
+.product .card_body .description {
+  font-size: 1rem;
+  line-height: 22px;
+  font-weight: 100;
+  padding-top: 2.5rem;
+  color: rgb(62, 62, 62);
+}
+
+.card_buttons {
+  width: 100%;
+}
+.card_buttons button,
+.modal_btn {
+  width: 100%;
+  padding: 1rem;
+  font-size: 14px;
+  background-color: transparent;
+  color: white;
+  letter-spacing: 0.8px;
+  font-weight: 600;
+  box-shadow: none;
+  transition: 0.2s ease-in-out;
+}
+button.add,
+.modal_btn {
+  border: 1px solid rgb(51, 43, 169);
+  color: rgb(51, 43, 169);
+}
+
+button.save {
+  border: 1px solid rgb(183, 79, 0);
+  color: rgb(183, 79, 0);
+}
+
+button.add:hover {
   background-color: rgb(51, 43, 169);
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+button.save:hover {
+  background-color: rgb(183, 79, 0);
   color: white;
   cursor: pointer;
   transition: 0.2s ease-in-out;
@@ -106,10 +190,15 @@ html {
 .colors_options_container {
   display: flex;
   align-items: center;
+  margin: 0.5rem;
+}
+.colors p {
+  font-weight: 400;
+  font-style: italic;
 }
 .color_option {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 100%;
   margin: 2px;
   border: none;
@@ -119,8 +208,8 @@ html {
 }
 .color_option.activeColor {
   border: 5px solid rgb(173, 173, 173);
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
 
 .red {
@@ -131,4 +220,49 @@ html {
 }
 .green {
   background-color: rgb(32, 180, 113);
+}
+
+/* MODAL  */
+
+#modal {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#modal:empty {
+  display: none;
+}
+#modal > div {
+  width: 100%;
+  max-width: 550px;
+  border-radius: 15px;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+}
+#modal > div h2,
+#modal > div .buttons_container {
+  padding: 1rem;
+  text-align: center;
+}
+
+/* FAVORITES  */
+
+.favorite {
+  border: 1px solid rgb(183, 79, 0);
+  border-left: 4px solid rgb(183, 79, 0);
 }
