--- a/src/style.css
+++ b/src/style.css
@@ -32,4 +32,16 @@
   .cancel {
     @apply border-orange-600  text-orange-900 hover:bg-orange-600;
   }
+  .color_option {
+    @apply h-4 w-4;
+  }
+  .red {
+    @apply bg-red-500;
+  }
+  .green {
+    @apply bg-green-500;
+  }
+  .blue {
+    @apply bg-blue-500;
+  }
 }
