Manage state with redux toolkit, additional components, informational ui elements

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-slate-50 font-serif;
+    @apply bg-slate-50 font-sans;
   }
 }
 
@@ -28,20 +28,39 @@
   .add {
     @apply border-blue-800  text-blue-900 transition hover:bg-blue-800;
   }
+  .checkout {
+    @apply bg-blue-800  text-white transition hover:scale-x-105;
+  }
   .save,
   .cancel {
     @apply border-orange-600  text-orange-900 hover:bg-orange-600;
   }
   .color_option {
-    @apply h-4 w-4;
+    @apply m-1 h-5 w-5 rounded-full;
   }
-  .red {
-    @apply bg-red-500;
+  .yellow {
+    @apply bg-yellow-500;
   }
   .green {
-    @apply bg-green-500;
+    @apply bg-green-900;
   }
   .blue {
     @apply bg-blue-500;
+  }
+  .color_option.activeColor {
+    @apply h-7 w-7;
+  }
+  .activeColor {
+    @apply border-4 border-gray-400;
+  }
+  .menu li {
+    @apply m-1 p-2;
+  }
+  .active,
+  a.active {
+    @apply font-bold text-blue-900;
+  }
+  .favorite {
+    @apply border border-orange-600;
   }
 }
